[package]
name = "query2json"
version = "0.1.0"
authors = ["Nikolay Chistyakov <chikolad@gmail.com>"]
description = "Text query to JSON filter converter"
license = "MIT/Apache-2.0"
repository = "https://github.com/kolach/query2json"
edition = "2021"

[dependencies]
nom = "7.1.3"
thiserror = "1.0.56"
byte-unit = { version = "4.0.19", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
